Bootstrap by Create React App

--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "threejs-roxik-example",
+  "name": "threejs-roxik-sharikura",
   "description": "Three.js Roxik Sharikura demo",
   "author": "Jason Sturges",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "parcel index.html --open",
-    "build": "parcel build index.html --public-url '.'"
-  },
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "node-sass": "^4.9.3",
-    "react": ">=15",
-    "react-dom": "^16.5.2",
-    "react-router-dom": "^4.3.1",
-    "three": "^0.97.0"
+    "node-sass": "^4.11.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "three": "^0.103.0"
   },
-  "devDependencies": {
-    "babel-preset-react": "^6.24.1",
-    "parcel-bundler": "^1.6.1",
-    "sass": "^1.14.1"
-  }
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
