--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,21 @@
-# Logs
-logs
-*.log
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Compiled binary
-dist/
-
-# Dependency directories
-node_modules/
-
-# Cache
-.cache/
-
-# Optional npm cache directory
-.npm
