--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "gh-pages": "^2.0.1",
-    "node-sass": "^4.11.0",
+    "gh-pages": "2.0.1",
+    "node-sass": "^4.12.0",
+    "pixi.js": "^5.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
-    "three": "^0.103.0"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "three": "^0.107.0"
   },
   "scripts": {
     "predeploy": "yarn build",
@@ -25,10 +26,16 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
