--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "three": "^0.158.0"
   },
   "devDependencies": {
+    "@types/three": "^0.158.2",
     "prettier": "^3.0.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
