--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "three": "^0.158.0"
+    "three": "^0.161.0",
+    "three-stdlib": "^2.29.4"
   },
   "devDependencies": {
-    "@types/three": "^0.158.2",
+    "@types/three": "^0.161.2",
     "prettier": "^3.0.3",
     "typescript": "^5.0.2",
     "vite": "^4.5.2"
